--- a/开题报告.md
+++ b/开题报告.md
@@ -1,4 +1,17 @@
 # 第12组开题报告
 
+- 选题的目的与意义（项目产物形态与其现实价值）
 
+  
 
+- 选题思路（项目产物的主要功能、性能以及大致的开发过程）
+
+  
+
+- 技术路线（技术原理、开发工具以及需要解决的技术难题）
+
+  
+
+- 相关支持条件（采用的平台、工具以及技术成熟度）
+
+  
