添加了 选题的目的与意义部分

--- a/开题报告.md
+++ b/开题报告.md
@@ -2,7 +2,14 @@
 
 - 选题的目的与意义（项目产物形态与其现实价值）
 
-  
+  ​	我们将实现一个音乐播放器，在实现基础播放功能的基础上，尝试进行多种拓展。
+
+  ​	现在市面上已有很多成熟的音乐播放器。实现音乐播放器的主要意义在于，我们可以在开发音乐播放器的过程中，训练各种软件工程开发的方法，训练团队协作。
+
+  ​	选择开发音乐播放器的理由有以下几个：
+
+  - 音乐播放器可以多平台运行。在力所能及的范围内，可以学习多个平台开发的经验
+  - 音乐播放器可以拓展很多功能。更方便团队协作，并且可以训练拓展功能的经验
 
 - 选题思路（项目产物的主要功能、性能以及大致的开发过程）
 
@@ -14,4 +21,5 @@
 
 - 相关支持条件（采用的平台、工具以及技术成熟度）
 
-  ，，
+  
+
