--- a/开题报告.md
+++ b/开题报告.md
@@ -10,13 +10,8 @@
 
 - 技术路线（技术原理、开发工具以及需要解决的技术难题）
 
-  
+  首先比较分析目前主流音乐播放器特有的功能和常见音频编码格式的特点，得出音乐播放器的功能需求。接着，把需求分析得转化为软件结构和数据结构，然后使用面向对象的软件开发方法，基于微软的Visual Studio 2019开发平台，以C# 或Qt作为本系统的开发语言实现音乐播放器预定的需求功能，最终对该音乐播放器进行评估与性能测试。需要解决的技术难题包括：将该播放器系统按功能进行模块划分、建立模块的层次结构以及调用关系，确定模块接口和人机界面等；C#或Qt的使用需要学习；整体环境平台搭建过程以及小组成员之间版本同步问题；
 
 - 相关支持条件（采用的平台、工具以及技术成熟度）
 
   
-
-- 选题思路（项目产物的主要功能、性能以及大致的开发过程）
-
-
-yes!!
