加入 选题思路 的详细内容
包含音乐播放主要功能和拓展功能描述，以及大致开发过程

--- a/开题报告.md
+++ b/开题报告.md
@@ -13,7 +13,44 @@
 
 - 选题思路（项目产物的主要功能、性能以及大致的开发过程）
 
-  
+  我们实现的音乐播放主要功能有：
+
+- 播放，暂停，换曲，进度条等基础功能，方便使用的界面，可以调节音量，实现循环播放、随机播放或顺序播放等功能，并在此基础上进行拓展：
+
+拓展功能：
+
+- 实现扫描识别本地音乐，方便用户广泛使用实现的音乐播放器；
+- 实现捕获/丢弃音乐焦点，当需要语音、视频或其他需要扬声器输出声音时，自动暂停，或者收到通知的时候音乐的音量变小随后恢复；
+- 实现硬件软件设备配合，实现耳机线控，并在耳机拔出或声音输出设备变换时暂停播放；
+- 实现在锁屏或者小窗控制播放器。
+
+开发过程：
+
+1. 需求分析：
+
+   考虑目标用户需求或实验项目需求，思考需要和能够实现的功能，确立软件功能目标和工程方向。
+
+2. 概要设计
+
+   对软件系统的设计进行考虑，包括系统的基本处理流程、系统的组织结构、模块划分、功能分配、接口设计、运行设计、数据结构设计和出错处理设计等，为软件的具体设计提供基础和方向。
+
+3. 详细设计
+
+   在详细设计中，描述实现具体模块所涉及到的主要算法、数据结构、类的层次结构及调用关系，需要说明软件系统各个层次中的每一个程序(每个模块或子程序)的设计考虑，以便进行编码和测试。应当保证软件的需求完全分配给整个软件
+
+4. 实现和测试
+
+   根据确定好的要求，开始具体的编写程序工作，分别实现各模块的功能，从而实现对目标系统的功能、性能、接口、界面等方面的要求。
+
+   测试编写好的系统。软件测试可以按照多种方式进行：可以分为模块测试和整体联调，对整体或局部功能模块进行测试；按照测试条件，可以分为正常操作情况测试和异常情况测试；按照测试的输入范围，可以分为全覆盖测试和抽样测试。
+
+5. 检验
+
+   将实现的项目或软件投入使用，实现用户的使用和检验。
+
+6. 维护
+
+   根据用户需求的变化或环境的变化，对应用程序进行全部或部分的修改。
 
 - 技术路线（技术原理、开发工具以及需要解决的技术难题）
 
