手动整理 添加相关支持条件
merge后格式出现一些问题，进行了手动整理

--- a/开题报告.md
+++ b/开题报告.md
@@ -1,30 +1,29 @@
 # 第12组开题报告
 
-- 选题的目的与意义（项目产物形态与其现实价值）
+##### 选题的目的与意义
 
-  ​	我们将实现一个音乐播放器，在实现基础播放功能的基础上，尝试进行多种拓展。
+​	我们将实现一个音乐播放器，在实现基础播放功能的基础上，尝试进行多种拓展。
 
-  ​	现在市面上已有很多成熟的音乐播放器。实现音乐播放器的主要意义在于，我们可以在开发音乐播放器的过程中，训练各种软件工程开发的方法，训练团队协作。
+​	现在市面上已有很多成熟的音乐播放器。实现音乐播放器的主要意义在于，我们可以在开发音乐播放器的过程中，训练各种软件工程开发的方法，训练团队协作。
 
-  ​	选择开发音乐播放器的理由有以下几个：
+​	选择开发音乐播放器的理由有以下几个：
 
-  - 音乐播放器可以多平台运行。在力所能及的范围内，可以学习多个平台开发的经验
-  - 音乐播放器可以拓展很多功能。更方便团队协作，并且可以训练拓展功能的经验
+- 音乐播放器可以多平台运行。在力所能及的范围内，可以学习多个平台开发的经验
 
-- 选题思路（项目产物的主要功能、性能以及大致的开发过程）
+- 音乐播放器可以拓展很多功能。更方便团队协作，并且可以训练拓展功能的经验
 
-  我们实现的音乐播放主要功能有：
+##### 主要功能：
 
 - 播放，暂停，换曲，进度条等基础功能，方便使用的界面，可以调节音量，实现循环播放、随机播放或顺序播放等功能，并在此基础上进行拓展：
 
-拓展功能：
+##### 拓展功能：
 
 - 实现扫描识别本地音乐，方便用户广泛使用实现的音乐播放器；
 - 实现捕获/丢弃音乐焦点，当需要语音、视频或其他需要扬声器输出声音时，自动暂停，或者收到通知的时候音乐的音量变小随后恢复；
 - 实现硬件软件设备配合，实现耳机线控，并在耳机拔出或声音输出设备变换时暂停播放；
 - 实现在锁屏或者小窗控制播放器。
 
-开发过程：
+##### 开发过程：
 
 1. 需求分析：
 
@@ -52,10 +51,26 @@
 
    根据用户需求的变化或环境的变化，对应用程序进行全部或部分的修改。
 
-- 技术路线（技术原理、开发工具以及需要解决的技术难题）
+##### 技术路线（技术原理、开发工具以及需要解决的技术难题）
 
-  
 
-- 相关支持条件（采用的平台、工具以及技术成熟度）
 
-  
+##### 相关支持条件（采用的平台、工具以及技术成熟度）
+
+
+  - 采用的平台
+
+    将首先在windows实现客户端开发，如果有能力，将会尝试Linux端，网页端，移动端的开发。
+
+  - 使用的工具
+
+    在开发windows的客户端时，计划使用Qt图形库，或者C#开发。
+
+  - 技术成熟度
+
+    各种音频格式的解码器已有很成熟的开源代码可供使用，图形界面也有较为成熟的库可供使用。
+
+    
+
+    
+
